[package]
name = "handler"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio.workspace = true
serde.workspace = true
async-trait.workspace = true
rocket.workspace = true
traq-bot-http.workspace = true
traq.workspace = true
itertools.workspace = true
bytes.workspace = true
shaku.workspace = true

repository.path = "../repository"
domain.path = "../domain"
anyhow = "1.0.75"
