[package]
name = "repository"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio.workspace = true
serde.workspace = true
entity = { path = "../entity" }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
chrono = { version = "0.4.31" }
sync-trait.workspace = true

[dependencies.sea-orm]
version = "0.12.9"
features = [
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "macros",
    "with-chrono",
    "with-uuid",
]
